--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dummy-server",
+  "name": "Project",
   "version": "1.0.0",
-  "description": "Learning purpose",
+  "description": "This project is a scaffold for developing backend services",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
