--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.2"
+    "sequelize": "^6.37.2",
+    "winston": "^3.13.0"
   }
 }
