--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon index.ts",
     "format:write": "npx prettier --write .",
-    "format:check": "npx prettier --write ."
+    "format:check": "npx prettier --check ."
   },
   "keywords": [],
   "author": "",
