--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
@@ -34,7 +35,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format:write && git add -A ."
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged":{
+    "*.{ts,json,css,md,html}":[
+      "npm run format:write && git add -A ."
+    ]
   }
 }
