--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "nodemon index.ts",
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "compiler:check": "npx tsc --noEmit"
   },
   "keywords": [],
   "author": "",
