--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "husky": "^8.0.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "husky": "^8.0.0"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "rotating-file-stream": "^3.2.1",
     "sequelize": "^6.37.2",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
