--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
+    "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
-    "pg": "^8.11.5",
-    "pg-hstore": "^2.3.4",
     "rotating-file-stream": "^3.2.1",
     "sequelize": "^6.37.2",
     "winston": "^3.13.0",
